--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <section id="main_content">
           <h1>
-<a id="phoenix-varusgithubio" class="anchor" href="#phoenix-varusgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>phoenix-varus.github.io</h1>
+<a id="phoenix-varusgithubio" class="anchor" href="#phoenix-varusgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>我的首页</h1>
         </section>
 
         <footer>
