--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css"/>
     <!--JS import-->
     <script type="text/javascript" src="./javascripts/jquery-1.12.2.js"></script>
-    <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./bootstrap/js/bootstrap.js"></script>
 </head>
 <style type="text/css">
     #page {
