--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css"/>
     <!--JS import-->
     <script type="text/javascript" src="./javascripts/jquery-1.12.2.js"></script>
-    <script type="text/javascript" src="./bootstrap/js/bootstrap.js"></script>
+    <script type="text/javascript" src="./bootstrap/js/bootstrap.min.js"></script>
 </head>
 <style type="text/css">
     #page {
@@ -15,54 +15,12 @@
     }
 </style>
 <body>
-<div class="tab-menus">
-    <ul id="Tab-v" class="nav nav-tabs">
-        <li class="active">
-            <a href="#home" data-toggle="tab">
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;枫&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            </a>
-        </li>
-        <li><a href="#github" data-toggle="tab">Github</a></li>
-        <li><a href="#blog" data-toggle="tab">Blog</a></li>
-        <li><a href="#resume" data-toggle="tab">Resume</a></li>
-        <li><a href="#message" data-toggle="tab">Message</a></li>
-        <li class="dropdown">
-            <a href="#" id="about" class="dropdown-toggle"
-               data-toggle="dropdown">Java
-                <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu" role="menu" aria-labelledby="about">
-                <li><a href="#jmeter" tabindex="-1" data-toggle="tab">jmeter</a></li>
-                <li><a href="#ejb" tabindex="-1" data-toggle="tab">ejb</a></li>
-            </ul>
-        </li>
-    </ul>
-    <div id="TabContent-v" class="tab-content">
-        <div class="tab-pane fade in active" id="home">
-            <div id="page" class="jumbotron">
-                <div class="container">
-                    <h1>我是闫俊峰！</h1>
-                    <p>Welcome to varus's page.</p>
-                    <p><a class="btn btn-primary btn-lg" role="button">
-                        了解更多</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="tab-pane fade" id="github">
-            <p>iOS 是一个由苹果公司开发和发布的手机操作系统。最初是于 2007 年首次发布 iPhone、iPod Touch 和 Apple
-                TV。iOS 派生自 OS X，它们共享 Darwin 基础。OS X 操作系统是用在苹果电脑上，iOS 是苹果的移动版本。</p>
-        </div>
-        <div class="tab-pane fade" id="blog">
-            <p>jMeter 是一款开源的测试软件。它是 100% 纯 Java 应用程序，用于负载和性能测试。</p>
-        </div>
-        <div class="tab-pane fade" id="resume">
-            <p>Enterprise Java Beans（EJB）是一个创建高度可扩展性和强大企业级应用程序的开发架构，部署在兼容应用程序服务器（比如 JBOSS、Web Logic 等）的 J2EE 上。
-            </p>
-        </div>
+<div id="page" class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1>Varus</h1>
+        <p>我是一个测试页面</p>
     </div>
 </div>
-
 
 <script type="text/javascript">
     var heightNum = window.innerHeight;
